--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-highcharts": "^16.0.2",
-    "react-scripts": "3.1.0",
+    "react-highcharts": "^16.1.0",
+    "react-scripts": "^3.4.4",
     "styled-components": "^4.3.2"
   },
   "scripts": {
